# cNFT-Mint

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
programs/nft_program/: Cargo.toml
programs/nft_program/src/: lib.rs
programs/nft_program/src/error/: mod.rs
programs/nft_program/src/instructions/: mint.rs
programs/nft_program/src/state/: metadata.rs
programs/nft_program/src/utils/: mod.rs
scripts/: mint-nft.ts
