[workspace]
members = [
    "programs/*",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["token", "metadata"] }
mpl-token-metadata = "3.2.3"
solana-program = "1.17.0"
spl-account-compression = { version = "0.3.0", features = ["cpi"] }
spl-noop = { version = "0.2.0", features = ["cpi"] }
mpl-bubblegum = "1.4.0"




[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
